--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-     <h1> Erste Schritte</h1>
-     <h3> dritte Variante</h3>
+    <h1> Katja</h1>
+    <h1> Erste Schritte</h1>
+    <h3> dritte Variante</h3>  
 </body>
 </html>
